# basketball-analytics

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
ball_aquisition/: __init__.py  ball_aquisition_detector.py
court_keypoint_detector/: court_keypoint_detector.py
drawers/: __init__.py  ball_tracks_drawer.py  court_key_points_drawer.py  draw_tracks_drawer.py  pass_and_interceptions_drawer.py  player_tracks_drawer.py  speed_and_distance_drawer.py  tactical_view_drawer.py  team_ball_control_drawer.py  utils.py
dummy_notes/: inference_keypoints_model.py  interpolation_temp.ipynb
input_videos/: .gitkeep
pass_and_interception_detector/: pass_and_interception_detector.py
speed_and_distance_calculator/: __init__.py  speed_and_distance_calculator.py
tactical_view_converter/: homography.py  tactical_view_converter.py
team_assigner/: team_assigner.py
trackers/: ball_tracker.py  player_tracker.py
training/: basketball_court_keypoint_detection_training.py  basketball_training_yolo_v26.ipynb  basketball_training_yolo_v26.py
utils/: __init__.py  bbox_utils.py  stubs_utils.py  video_utils.py
