[project]
name = "basketball-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ultralytics>=8.4.38",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "roboflow>=1.3.3",
    "ipykernel>=7.2.0",
    "supervision>=0.27.0.post2",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
